--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -28,6 +28,13 @@ const openGraphImageUrl = getImagePath({ url, site });
             image: openGraphImageUrl,
             url: url,
           },
+          image: {
+            url: openGraphImageUrl,
+            secureUrl: openGraphImageUrl,
+            type: 'image/png',
+            width: 1200,
+            height: 630,
+          },
         }
       }
     />
