--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -2,8 +2,6 @@
 import Head from '@components/Head.astro';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
-import { SEO } from 'astro-seo';
-import { getImagePath } from 'astro-opengraph-images';
 import { SITE } from '@consts';
 
 type Props = {
@@ -12,33 +10,15 @@ type Props = {
 };
 
 const { title, description } = Astro.props;
-const { url, site } = Astro;
-const openGraphImageUrl = getImagePath({ url, site });
 ---
 
 <!doctype html>
 <html lang="en">
   <head>
-    <SEO
-      openGraph={
-        {
-          basic: {
-            title: title,
-            type: 'website',
-            image: openGraphImageUrl,
-            url: url,
-          },
-          image: {
-            url: openGraphImageUrl,
-            secureUrl: openGraphImageUrl,
-            type: 'image/png',
-            width: 1200,
-            height: 630,
-          },
-        }
-      }
+    <Head 
+      title={`${title} | ${SITE.NAME}`} 
+      description={description}
     />
-    <Head title={`${title} | ${SITE.NAME}`} description={description} />
   </head>
   <body>
     <Header />
