--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -2,7 +2,6 @@
 import Head from '@components/Head.astro';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
-import { SITE } from '@consts';
 
 type Props = {
   title: string;
@@ -16,7 +15,7 @@ const { title, description } = Astro.props;
 <html lang="en">
   <head>
     <Head 
-      title={`${title} | ${SITE.NAME}`} 
+      title={title}
       description={description}
     />
   </head>
