--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -6,9 +6,14 @@ import Footer from '@components/Footer.astro';
 type Props = {
   title: string;
   description: string;
+  type?: 'website' | 'article';
+  publishedTime?: Date;
+  tags?: string[];
 };
 
-const { title, description } = Astro.props;
+const { title, description, type = 'website', publishedTime, tags = [] } = Astro.props;
+
+const publishedTimeString = publishedTime?.toISOString();
 ---
 
 <!doctype html>
@@ -17,6 +22,9 @@ const { title, description } = Astro.props;
     <Head 
       title={title}
       description={description}
+      type={type}
+      publishedTime={publishedTimeString}
+      tags={tags}
     />
   </head>
   <body>
