--- a/src/global.css
+++ b/src/global.css
@@ -14,12 +14,15 @@
   h5,
   h6 {
     @apply text-base-content;
+    @apply font-bold;
   }
 
   article {
-    @apply prose prose-headings:text-accent prose-p:text-base-content;
+    @apply prose prose-headings:text-neutral-content prose-headings:font-bold prose-p:text-base-content prose-code:text-base-content;
     @apply prose-strong:text-neutral-content;
     @apply prose-code:text-base-content;
+    @apply max-w-full prose prose-img:mx-auto prose-img:my-auto;
+    @apply prose-headings:font-bold prose-p:font-serif;
   }
 }
 
@@ -61,24 +64,6 @@ main {
 footer {
   @apply py-5 text-sm;
 }
-
-article {
-  @apply max-w-full prose prose-img:mx-auto prose-img:my-auto;
-  @apply prose-headings:font-semibold prose-p:font-serif;
-}
-
-/* 
-@layer utilities {
-  article a {
-    @apply font-sans text-current underline underline-offset-2;
-    @apply decoration-base-100/15 dark:decoration-white/30;
-    @apply transition-colors duration-300 ease-in-out;
-  }
-  article a:hover {
-    @apply bg-base-100 dark:bg-primary-content;
-    @apply bg-base-100/25 dark:bg-primary-content/25;
-  }
-} */
 
 .animate {
   @apply opacity-0 translate-y-3;
