--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -3,6 +3,7 @@ import { getCollection } from 'astro:content';
 import PageLayout from '@layouts/PageLayout.astro';
 import Container from '@components/Container.astro';
 import ArrowCard from '@components/ArrowCard.astro';
+import CollectionPageStructuredData from '@components/CollectionPageStructuredData.astro';
 import { PROJECTS } from '@consts';
 
 const projects = (await getCollection('projects'))
@@ -11,6 +12,12 @@ const projects = (await getCollection('projects'))
 ---
 
 <PageLayout title={PROJECTS.TITLE} description={PROJECTS.DESCRIPTION}>
+  <CollectionPageStructuredData 
+    slot="structured-data"
+    type="Article"
+    name={PROJECTS.TITLE}
+    description={PROJECTS.DESCRIPTION}
+  />
   <Container>
     <div class="space-y-10">
       <div class="animate font-semibold uppercase">
