--- a/src/components/ImageCard.astro
+++ b/src/components/ImageCard.astro
@@ -58,6 +58,6 @@ if (!images[imagePath]) throw new Error(`"${imagePath}" does not exist in glob: 
         object-fit: cover;
     }
     .custom-image-card-caption {
-        @apply prose-sm text-center mt-2 italic text-secondary-content;
+        @apply prose-sm text-center mt-2 italic text-accent-content;
     }
 </style>
