--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -140,6 +140,34 @@ config={[
     fallback: 'sans-serif',
   },
   {
+    name: 'Chirp',
+    src: [
+      {
+        style: 'normal',
+        weight: '400',
+        path: './public/fonts/ChirpRegular.woff2',
+      },
+      {
+        style: 'normal',
+        weight: '500',
+        path: './public/fonts/ChirpMedium.woff2',
+      },
+      {
+        style: 'normal',
+        weight: '600',
+        path: './public/fonts/ChirpBold.woff2',
+      },
+      {
+        style: 'normal',
+        weight: '700',
+        path: './public/fonts/ChirpHeavy.woff2',
+      },
+    ],
+    preload: false,
+    display: 'swap',
+    fallback: 'sans-serif',
+  },
+  {
     name: 'gg-sans',
     src: [
       {
